...

        let factTap = Observable.merge(triviaTap, mathTap)

        let emptyNumberErrorMessage = factTap
            .withLatestFrom(numberInput)
            .filter { $0.isEmpty }
            .map { _ in "Please, input some number! For example, your favorite one :)" }

        let wrongNumberErrorMessage = factTap
            .withLatestFrom(numberInput)
            .filter { !$0.isEmpty }
            .filter { Int($0) == nil }
            .map { _ in "Please, input a number! For example, a 5 :)" }

        let showFactState = factTap
            .withLatestFrom(numberInput) { (factType, numberInput) -> (NumberFactType, Int)? in
                guard let intNumber = Int(numberInput) else { return nil }
                return (factType, intNumber)
            }
...
