...
        let closeAction = UIAlertAction(title: buttonTitle, style: .default)
        alert.addAction(closeAction)
        present(alert, animated: true)
    }

    func showErrorAlert(error: Error) {
        let title = "Oops!"
        let buttonText = "OK"

        if let customError = error as? CustomError {
            showAlert(title: title, message: customError.localizedDescription, buttonTitle: buttonText)
        } else {
            showAlert(title: title, message: error.localizedDescription, buttonTitle: buttonText)
...
